--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ken-cj.github.io/Pawgo-Service-React",
+  "homepage": "https://ken-cj.github.io/Pawgo-Service-React2",
   "name": "pawgo-shop",
   "version": "0.1.0",
   "private": true,
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^6.24.1"
   }
 }
